styles.css
html,
body {
  margin: 0;
  padding: 0;
  height: 100%;
  background: whitesmoke;
}

#main-container {
  min-height: 100%;
  position: relative;
  overflow: hidden;
  display: block;
  padding-bottom: 100px;
  max-width: 100%;
}

header {
  width: 100%;
  position: fixed;
  padding: 0px;
  top: 0px;
  box-shadow: 0 4px 2px -3px grey;
  background-color: white;
  z-index: 2;
}

header .name {
  position: absolute;
  text-align: center;
  font-family: "Montserrat", sans-serif;
  letter-spacing: 2px;
  font-size: 15px;
  left: 50%;
  margin-left: -85px;
  top: 40%;
}

header .favicon {
  position: absolute;
  height: 60px;
  width: 60px;
  margin-left: 1.5%;
  padding: 0;
}

body {
  padding-bottom: 60px;
}

footer {
  position: absolute;
  bottom: 0;
  width: 100%;
  height: 100px;
  box-shadow: 0 -4px 2px -3px grey;
  background-color: white;
}

footer .copyright {
  position: absolute;
  text-align: center;
  font-family: "NTR", sans-serif;
  letter-spacing: 2px;
  font-size: 15px;
  left: 50%;
  margin-left: -115px;
  top: 40%;
}

.about-container {
  position: fixed;
  float: left;
  margin-top: 200px;
  margin-left: 5%;
  max-width: 30%;
}

.about-name {
  font-family: Quicksand;
}

.about {
  font-family: Rubik;
  font-size: 20px;
  font-weight: 500;
  display: inline-block;
}

.wrap {
  border-right: 0.08em solid crimson;
  animation: blink-caret 0.75s step-start infinite;
}

@keyframes blink-caret {
  from,
  to {
    border-color: transparent;
  }
  50% {
    border-color: crimson;
  }
}
.card-container {
  position: relative;
  float: right;
  margin-top: 5%;
  max-width: 50%;
  margin: 5%;
  display: flex;
  flex-direction: column;
}

.card {
  box-shadow: 5px 5px 7px -2px rgba(0, 0, 0, 0.5);
  max-height: 35em;
  max-width: 35em;
  margin-top: 5%;
  margin-bottom: 5%;
  max-width: 100%;
  display: block;
  position: relative;
  flex: 1;
}

.card .card-image {
  background: #ffd7bc;
  height: 28em;
  width: 35em;
  max-width: 100%;
}

.card .card-discription {
  background: #ffffff;
  min-height: 7em;
  width: 35em;
  margin-bottom: 10%;
  max-width: 100%;
}

.card-discription .discription {
  font-family: Rubik;
  padding: 20px;
  text-align: left;
  position: absolute;
}

.card-discription .stack {
  font-family:  Rubik;
}

.dropbtn {
  float: right;
  margin-right: 10%;
  margin-top: 30px;
  padding-bottom: 16px;
  font-family: "Quicksand", sans-serif;
}

.open {
  display: block;
}
.closed {
  display: none;
}

.dropbtn:hover .icon {
  transition: 0.5s;
  transform: rotateX(180deg);
}

.dropdown-content {
  position: absolute;
  background-color: #f9f9f9;
  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
  z-index: 1;
  margin-top: 16px;
  width: 100px;
  max-width: 100px;
}

.dropdown-content p {
  display: block;
  padding: 12px 16px;
  border-bottom: 0.05em solid #bbbbbb;
}

.dropdown-content p:last-child {
  border: none;
}

.dropdown-content p:hover {
  background-color: #e6e6e6;
}

p {
  margin: 0;
}

ul {
  list-style-type: none;
  /*overflow: hidden;*/
}

li {
  display: inline-block;
  /*padding-bottom: 16px;*/
  color: black;
  text-align: center;
  text-decoration: none;
}

.cards-anim {
  position: relative;
  animation-name: cards;
  animation-duration: 1.5s;
  animation-fill-mode: forwards;
  padding: 0;
}

@-webkit-keyframes cards {
  0% {
    right: -1000px;
  }
  100% {
    right: 0px;
  }
}

@-moz-keyframes cards {
  0% {
    right: -1000px;
  }
  100% {
    right: 0px;
  }
}

@keyframes cards {
  0% {
    right: -1000px;
  }
  100% {
    right: 0px;
  }
}

@media screen and (max-width: 800px) {
  .about-container {
    float: none;
    padding-bottom: 10%;
    max-width: 100%;
    position: relative;
    margin-right: 5%;
    margin-top: 25%;
  }


  .card-container {
    float: none;
    max-width: 100%;
    position: relative;
  }

  .card {
    box-shadow: 0px 5px 14px 3px rgba(0, 0, 0, 0.2);
    max-width: 100%;
  }


  @media screen and (width: 768px) {
      .about-container {
        padding: 30px;
        margin-top: 70px;
      }

      .card-container {
        padding-right: 30px;
        padding-left: 65px;
      }
  }
}

